Update members api endpoint
